# The-Network-Project

./: .gitignore  App.csproj  App.xaml  App.xaml.cs  CMakeLists.txt  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  SPECIFIACATIONS.md  SPECIFICATIONS.md  TNP.App.csproj  TNP.App.sln  TNP.sln  The-Network-Project.csproj  The-Network-Project.sln  VirtualNetwork.cs  VirtualNetworkConfigurationWindow.xaml  VirtualNetworkConfigurationWindow.xaml.cs
Assets/: Icons.xaml
Configs/: ConfigExporter.cs  ConfigImporter.cs
Converters/: BoolToEnabledTextConverter.cs  BoolToFontWeightConverter.cs  BoolToGridBackgroundConverter.cs  BoolToSelectedBrushConverter.cs  BoolToSelectedConnectionThicknessConverter.cs  BoolToSelectedThicknessConverter.cs  BoolToStatusConverter.cs  BoolToTextConverter.cs  BoolToVisibilityConverter.cs  ConnectionActivityToDashArrayConverter.cs  ConnectionTypeToColorConverter.cs  InverseBoolConverter.cs  InverseBoolToVisibilityConverter.cs  LogLevelToColorConverter.cs  MathConverter.cs  PathToVisualConverter.cs  ToolboxSelectionConverter.cs  ZeroToVisibilityConverter.cs
Models/: AccessPoint.cs  Computer.cs  Connection.cs  ConnectionType.cs  Firewall.cs  LogEntry.cs  Modem.cs  NetworkComponent.cs  NetworkComponent.cs.modified  NetworkConfiguration.cs  NetworkConfiguration.cs.modified  NetworkElement.cs  PluginInfo.cs  Printer.cs  PropertyViewModel.cs  Router.cs  Server.cs  SimulationLogLevel.cs  Switch.cs
Plugins/: DefaultPluginManager.cs  IPlugin.cs  IPluginManager.cs  PluginManager.cs
Resources/: StringResources.en.xaml  StringResources.fr.xaml  (+2 more)
(+35 files in other folders)
